tests/checker/bad/bad_adt_8.scilla
scilla_version 0

library Test

let bn = BNum 100
let i32 = MyInt32

contract Test ()

